--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo-app-loading": "^1.0.1",
     "expo-linear-gradient": "~8.4.0",
     "expo-status-bar": "~1.0.3",
+    "express": "^4.17.1",
     "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
